--- a/src/main/resources/templates/createCollection.html
+++ b/src/main/resources/templates/createCollection.html
@@ -123,8 +123,10 @@
 
           <!-- Submit Button -->
           <div class="flex flex-row justify-center items-center mt-4">
-            <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
-              Create Collection
+            <button 
+              class="button bg-blue-600 hover:bg-blue-800"
+              type="submit">
+                Create Collection
             </button>
           </div>
         </form>
