--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -41,7 +41,7 @@
             <input type="hidden" name="_csrf" value="${_csrf.token}" />
 
             <div class="mt-2 mb-2">
-              <label class="label" for="username">Username:</label>
+              <label class="label text-blue-300" for="username">Username:</label>
               <input
                 type="text"
                 id="username"
@@ -51,7 +51,7 @@
               />
             </div>
             <div class="mb-2">
-              <label class="label" for="email">Email:</label>
+              <label class="label text-blue-300" for="email">Email:</label>
               <input
                 type="email"
                 id="email"
@@ -61,7 +61,7 @@
               />
             </div>
             <div class="mb-2">
-              <label class="label" for="firstName">First Name:</label>
+              <label class="label text-blue-300" for="firstName">First Name:</label>
               <input
                 type="text"
                 id="firstName"
@@ -70,7 +70,7 @@
               />
             </div>
             <div class="mb-2">
-              <label class="label" for="lastName">Last Name:</label>
+              <label class="label text-blue-300" for="lastName">Last Name:</label>
               <input
                 type="text"
                 id="lastName"
@@ -79,7 +79,7 @@
               />
             </div>
             <div class="mb-2">
-              <label class="label" for="password">Password:</label>
+              <label class="label text-blue-300" for="password">Password:</label>
               <input
                 type="password"
                 id="password"
@@ -89,7 +89,7 @@
               />
             </div>
             <div class="mb-2">
-              <label class="label" for="confirmPassword">
+              <label class="label text-blue-300" for="confirmPassword">
                 Confirm Password:
               </label>
               <input
