--- a/src/main/resources/templates/updateItem.html
+++ b/src/main/resources/templates/updateItem.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="/css/output.css" />
 
     <script th:src="@{/js/previewFile.js}" defer></script>
-
   </head>
   <body>
     <header>
@@ -31,145 +30,170 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <div class="bg-white pb-4 h-full overflow-y-auto">
-        <div class="collectionHeader bg-slate-100">
-          <span class="text-sm font-semibold text-slate-600">Update Item</span>
-        </div>
-        <div class="flex flex-col w-full items-center justify-center">
-          <img
-            class="aspect-square w-full bg-white"
-            id="previewImage"
-            th:src="${item?.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
-            alt="Collection Image"
-          />
+    <main class="bottom-0 overflow-y-auto">
+      <div class="container">
+        <nav>
+          <span class="w-full text-center text-sm font-semibold text-slate-600">
+            Update Item
+          </span>
+        </nav>
+        <div class="box pb-3">
+          <div class="square">
+            <img
+              class="aspect-square w-full"
+              id="previewImage"
+              th:src="${item?.imageUrl != null ? item.imageUrl : '/images/item_image.png'}"
+              alt="Collection Image"
+            />
+          </div>
           <a href="#" id="triggerUpload" class="mt-2">
             <span class="text-sm font-semibold text-blue-500">
               Update Item Image
             </span>
           </a>
-        </div>
-        <!-- ERROR / SUCCESS -->
-        <div class="errorBox">
-          <!-- SUCCESS MESSAGE -->
-          <div
-            id="successMessageDiv"
-            th:if="${message}"
-            th:text="${message}"
-            style="color: green"
-          ></div>
-          <!-- ERROR MESSAGE -->
-          <div
-            id="errorMessageDiv"
-            th:if="${error}"
-            th:text="${error}"
-            style="color: red"
-          ></div>
-        </div>
 
-        <div class="scrollable-container h-100vh">
-          <form
-            class="flex flex-col w-full items-center justify-center px-2"
-            th:action="@{/update-item/{id}(id=${item.id})}"
-            method="post"
-            enctype="multipart/form-data"
-          >
-            <input type="hidden" name="collectionId" th:value="${collectionId}" />
-            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+          <!-- ERROR / SUCCESS -->
+          <div class="errorBox">
+            <!-- SUCCESS MESSAGE -->
+            <div
+              id="successMessageDiv"
+              th:if="${message}"
+              th:text="${message}"
+              style="color: green"
+            ></div>
+            <!-- ERROR MESSAGE -->
+            <div
+              id="errorMessageDiv"
+              th:if="${error}"
+              th:text="${error}"
+              style="color: red"
+            ></div>
+          </div>
 
-            <!-- File Upload Field -->
-            <input
-              type="file"
-              id="hiddenFileInput"
-              name="itemImage"
-              style="display: none"
-              accept="image/*"
-            />
-
-            <!-- Title Field -->
-            <div class="labelInputBox w-full">
-              <label class="label" for="title">Title:</label>
+          <div class="scrollable-container h-100vh">
+            <form
+              class="flex flex-col w-full items-center justify-center px-4 mt-4"
+              th:action="@{/update-item/{id}(id=${item.id})}"
+              method="post"
+              enctype="multipart/form-data"
+            >
               <input
-                class="input w-full"
-                type="text"
-                id="itemTitle"
-                name="title"
-                th:value="${item?.title}"
-                placeholder="Title"
+                type="hidden"
+                name="collectionId"
+                th:value="${collectionId}"
               />
-            </div>
+              <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
 
-            <!-- Description Field -->
-            <div class="labelInputBox w-full">
-              <label class="label" for="description">Description:</label>
-              <textarea
-                class="input w-full"
-                id="description"
-                name="description"
-                th:text="${item?.description}"
-                placeholder="Description"
-                rows="6"
-                maxlength="255"
-              ></textarea>
-            </div>
-
-            <!-- Item Link Field -->
-            <div class="labelInputBox w-full">
-              <label class="label" for="itemLink">Item Link:</label>
+              <!-- File Upload Field -->
               <input
-                class="input w-full"
-                type="text"
-                id="itemLink"
-                name="itemLink"
-                th:value="${item?.itemLink}"
-                placeholder="http://example.com"
+                type="file"
+                id="hiddenFileInput"
+                name="itemImage"
+                style="display: none"
+                accept="image/*"
               />
-            </div>
 
-            <!-- Caption Field -->
-            <div class="labelInputBox w-full">
-              <label class="label" for="caption">Caption:</label>
-              <input
-                class="input w-full"
-                type="text"
-                id="caption"
-                name="caption"
-                th:value="${item?.caption}"
-                placeholder="Caption"
-              />
-            </div>
-
-            <!-- Submit Button -->
-            <div class="flex flex-row justify-center items-center">
-              <button
-                class="deleteButton bg-blue-600 hover:bg-blue-800"
-                type="submit"
+              <!-- Title Field -->
+              <div
+                class="flex flex-col w-full h-auto justify-center items-between"
               >
-                Update Item
-              </button>
-            </div>
-          </form>
-          <form
-            class="flex flex-col w-full items-center justify-center px-2 bg-white"
-            th:action="@{/delete-item/{id}(id=${item.id})}"
-            method="post"
-            enctype="multipart/form-data"
-          >
-            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-            <div class="flex flex-row justify-center items-center">
-              <button
-                class="deleteButton bg-red-600 hover:bg-red-800"
-                type="submit"
-                onclick="return confirm('Are you sure you want to delete this item? This action cannot be undone.');"
+                <div class="labelInputBox w-full">
+                  <label class="label" for="title">Title:</label>
+                  <input
+                    class="input w-full"
+                    type="text"
+                    id="itemTitle"
+                    name="title"
+                    th:value="${item?.title}"
+                    placeholder="Title"
+                  />
+                </div>
+              </div>
+
+              <!-- Description Field -->
+              <div
+                class="flex flex-col w-full h-auto justify-center items-between"
               >
-                Delete Item
-              </button>
+                <div class="labelInputBox w-full">
+                  <label class="label" for="description">Description:</label>
+                  <textarea
+                    class="input w-full"
+                    id="description"
+                    name="description"
+                    th:text="${item?.description}"
+                    placeholder="Description"
+                    rows="6"
+                    maxlength="255"
+                  ></textarea>
+                </div>
+              </div>
+
+              <!-- Item Link Field -->
+              <div
+                class="flex flex-col w-full h-auto justify-center items-between"
+              >
+                <div class="labelInputBox w-full">
+                  <label class="label" for="itemLink">Item Link:</label>
+                  <input
+                    class="input w-full"
+                    type="text"
+                    id="itemLink"
+                    name="itemLink"
+                    th:value="${item?.itemLink}"
+                    placeholder="http://example.com"
+                  />
+                </div>
+              </div>
+
+              <!-- Caption Field -->
+              <div
+                class="flex flex-col w-full h-auto justify-center items-between"
+              >
+                <div class="labelInputBox w-full">
+                  <label class="label" for="caption">Caption:</label>
+                  <input
+                    class="input w-full"
+                    type="text"
+                    id="caption"
+                    name="caption"
+                    th:value="${item?.caption}"
+                    placeholder="Caption"
+                  />
+                </div>
+              </div>
+
+              <!-- Submit Button -->
+              <div class="flex flex-row justify-center items-center mt-4">
+                <button
+                  class="button bg-blue-600 hover:bg-blue-800"
+                  type="submit"
+                >
+                  Update Item
+                </button>
+              </div>
+            </form>
+            <div
+              class="flex flex-col w-full items-center justify-center pt-16 pb-4 bg-[#f8fafc]"
+            >
+              <form
+                th:action="@{/delete-item/{id}(id=${item.id})}"
+                method="post"
+              >
+                <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+                <div>
+                  <button
+                    class="small-button bg-red-600 hover:bg-red-800"
+                    type="submit"
+                    onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
+                  >
+                    Delete
+                  </button>
+                </div>
+              </form>
             </div>
-          </form>
+          </div>
         </div>
       </div>
     </main>
-    <footer class="bg-slate-100">
-    </footer>
   </body>
 </html>
