--- a/src/main/resources/templates/followingList.html
+++ b/src/main/resources/templates/followingList.html
@@ -4,94 +4,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Following</title>
     <link rel="stylesheet" href="/css/output.css" />
-
   </head>
   <body>
     <header>
-      <nav class="navbar">
-        <ul class="flex justify-between w-full">
-          <li class="flex items-center">
+      <nav>
+        <ul>
+          <li>
             <a id="backButton" th:href="@{/profile/{id}(id=${userProfile.id})}">
               <span>&#8592;</span>
             </a>
           </li>
-          <li class="flex items-center">
+          <li>
             <h2>Following</h2>
           </li>
-          <li class="flex items-center"></li>
+          <li></li>
         </ul>
       </nav>
     </header>
 
     <main class="overflow-auto">
-      <div
-        th:if="${followingList.size() == 0}"
-        class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm"
-      >
-        <span class="text-sm font-semibold">Not following users yet</span>
-      </div>
-      <div th:each="follow : ${followingList}">
-        <ul
-          class="flex justify-start items-center w-full p-2 h-12 bg-slate-100 shadow-sm"
-        >
-          <li class="pr-2">
-            <a
-              th:if="${follow.id != null}"
-              th:href="@{/profile/{id}(id=${follow.id})}"
-            >
-              <img
-                class="h-7 w-7 rounded-full bg-white"
-                th:src="${ follow.profilePictureUrl ?: '/images/default-profile-photo.png'}"
-                alt="Profile Picture"
-              />
-            </a>
-          </li>
-          <li class="ml-2">
-            <a th:href="@{/profile/{id}(id=${follow.id})}">
-              <span
-                class="text-sm font-semibold"
-                th:text="${follow.username}"
-              ></span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </main>
-    <footer>
-      <div
-        class="h-12 w-full sm:w-3/4 md:w-1/2 lg:w-1/2 xl:w-1/2 mx-auto flex items-center"
-      >
-        <div class="footerNav">
-          <ul class="flex justify-between items-center w-full">
-            <li>
-              <div id="homeButton" class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/index">&#8962;</a>
-              </div>
-            </li>
-            <li>
-              <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/popular">&#10066;</a>
-              </div>
-            </li>
-            <li>
-              <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/create-collection">
-                  &#43;
-                </a>
-              </div>
-            </li>
-            <li>
-              <a href="/profile">
+      <div class="container p-2">
+        <nav th:if="${#lists.isEmpty(followingList)}" class="box">
+          <span class="text-sm font-semibold">Not Following Users</span>
+        </nav>
+
+        <nav
+          th:each="follow : ${followingList}"
+          class="rounded-md w-full mb-1 p-2 bg-slate-200 text-gray-900">
+          <ul>
+            <li class="pr-2">
+              <a
+                th:if="${follow.id != null}"
+                th:href="@{/profile/{id}(id=${follow.id})}"
+              >
                 <img
-                  class="h-7 w-7 rounded-full bg-white"
-                  th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                  class="round-image"
+                  th:src="${ follow.profilePictureUrl ?: '/images/default-profile-photo.png'}"
                   alt="Profile Picture"
                 />
               </a>
             </li>
+            <li class="ml-2">
+              <a th:href="@{/profile/{id}(id=${follow.id})}">
+                <span
+                  class="text-sm font-semibold"
+                  th:text="${follow.username}"
+                ></span>
+              </a>
+            </li>
           </ul>
-        </div>
-      </main>
+        </nav>
+      </div>
+    </main>
+    <footer>
+      <nav>
+        <ul>
+          <li>
+            <div id="homeButton" class="icon">
+              <a class="icon-style" href="/index">&#8962;</a>
+            </div>
+          </li>
+          <li>
+            <div class="icon">
+              <a class="icon-style" href="/popular">&#10066;</a>
+            </div>
+          </li>
+          <li>
+            <div class="icon">
+              <a class="icon-style" href="/create-collection">&#43;</a>
+            </div>
+          </li>
+          <li>
+            <a href="/profile">
+              <img
+                class="round-image"
+                th:src="${user != null && user.profilePictureUrl != null ? user.profilePictureUrl : '/images/default-profile-photo.png'}"
+                alt="Profile Picture"
+              />
+            </a>
+          </li>
+        </ul>
+      </nav>
     </footer>
   </body>
 </html>
