--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -23,7 +23,7 @@
           <li>
             <div th:if="${item.isOwner != null && item.isOwner}">
               <a
-                class="bg-blue-500 hover:bg-blue-700 text-white text-xs px-1 py-0.5 rounded"
+                class=" text-white text-xs px-1 py-0.5 rounded"
                 id="redirectUpdateItemDetails"
                 th:href="@{/update-item/{itemId}(itemId=${item?.id})}"
               >
