--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 
           <form th:action="@{/login}" method="post">
             <div class="mt-2 mb-2">
-              <label class="label" for="Username">Username:</label>
+              <label class="label text-blue-300" for="Username">Username:</label>
               <input
                 label="Username"
                 type="text"
@@ -51,7 +51,7 @@
             </div>
 
             <div class="mb-2">
-              <label class="label" for="password">Password:</label>
+              <label class="label text-blue-300" for="password">Password:</label>
               <input
                 type="password"
                 id="password"
