--- a/src/main/resources/templates/updateCollection.html
+++ b/src/main/resources/templates/updateCollection.html
@@ -13,9 +13,9 @@
   </head>
   <body>
       <header>
-        <nav class="navbar">
-          <ul class="flex justify-between items-center w-full">
-            <li class="flex items-center">
+        <nav>
+          <ul>
+            <li>
               <a id="backButton" th:href="@{/collection/{id}(id=${collection?.id ?: 'default'})}">
                 <span>&#8592;</span>
               </a>
@@ -32,50 +32,54 @@
           </ul>
         </nav>
       </header>
-      <main>
-        <div class="bg-white pb-4 h-full overflow-y-auto">
-          <div class="collectionHeader bg-slate-100">
-            <span class="text-sm font-semibold text-slate-600">Update Collection</span>
+
+
+    <main class="bottom-0 overflow-y-auto">
+      <div class="container">
+        <nav>
+          <span class="w-full text-center text-sm font-semibold text-slate-600">
+            Update Collection
+          </span>
+        </nav>
+
+        <div class="box pb-3">
+          <div class="square">
+            <img
+              class="aspect-square w-full"
+              id="previewImage"
+              th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+              alt="Collection Image"
+            />
           </div>
+          <a href="#" id="triggerUpload" class="mt-2">
+            <span class="text-sm font-semibold text-blue-500">
+              Update Collection Cover
+            </span>
+          </a>
+        <!-- ERROR / SUCCESS -->
+        <div class="errorBox">
+          <!-- SUCCESS MESSAGE -->
+          <div
+            id="successMessageDiv"
+            th:if="${message}"
+            th:text="${message}"
+            style="color: green"
+          ></div>
+          <!-- ERROR MESSAGE -->
+          <div
+            id="errorMessageDiv"
+            th:if="${error}"
+            th:text="${error}"
+            style="color: red"
+          ></div>
+        </div>
 
-          <div class="bg-white pb-4">
-            <div class="flex flex-col w-full items-center justify-center">
-              <img
-                class="aspect-square w-full bg-white"
-                id="previewImage"
-                th:src="${collection?.imageUrl != null ? collection.imageUrl : '/images/collection_image.png'}"
+        <form 
+          class="flex flex-col w-full items-center justify-center px-4 mt-4"
+          th:action="@{/update-collection/{id}(id=${collection.id})}" 
+          method="post" 
+          enctype="multipart/form-data">
 
-                alt="Collection Image"
-              />
-              <a href="#" id="triggerUpload" class="mt-2">
-                <span class="text-sm font-semibold text-blue-500"
-                  >Update Collection Cover</span
-                >
-              </a>
-            </div>
-            <!-- ERROR / SUCCESS -->
-            <div class="errorBox">
-              <!-- SUCCESS MESSAGE -->
-              <div
-                id="successMessageDiv"
-                th:if="${message}"
-                th:text="${message}"
-                style="color: green"
-              ></div>
-              <!-- ERROR MESSAGE -->
-              <div
-                id="errorMessageDiv"
-                th:if="${error}"
-                th:text="${error}"
-                style="color: red"
-              ></div>
-            </div>
-
-            <form 
-            class="flex flex-col w-full items-center justify-center px-2 bg-white"
-            th:action="@{/update-collection/{id}(id=${collection.id})}" 
-            method="post" 
-            enctype="multipart/form-data">
               <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
               <!-- File Upload Field -->
 
@@ -100,6 +104,7 @@
                     placeholder="Title"
                   />
                 </div>
+              </div>
 
               <!-- Caption Field -->
               <div class="flex flex-col w-full h-auto justify-center items-between">
@@ -114,38 +119,39 @@
                     placeholder="Caption"
                   />
                 </div>
+              </div>
 
-                <!-- Submit Button -->
-                <div class="flex flex-row justify-center items-center">
-                  <button
-                    class="deleteButton bg-blue-600 hover:bg-blue-800"
-                    type="submit"
-                  >
-                    Update Collection
-                  </button>
-                </div>
+              <!-- Submit Button -->
+              <div class="flex flex-row justify-center items-center mt-4">
+                <button class="button bg-blue-600 hover:bg-blue-800" type="submit">
+                  Update Collection
+                </button>
               </div>
             </form>
-            <form
-            class="flex flex-col w-full items-center justify-center px-2 bg-white"
+          </div>
+        </div>
+        
+        <div
+          class="flex flex-col w-full items-center justify-center pt-16 bg-[#f8fafc]"
+        >
+          <form
             th:action="@{/delete-collection/{id}(id=${collection.id})}"
             method="post"
-            >
-              <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
-              <div class="flex flex-row justify-center items-center">
+          >
+            <input type="hidden" name="_csrf" th:value="${_csrf?.token}" />
+            <div>
               <button
-                class="deleteButton bg-red-600 hover:bg-red-800"
+                class="small-button bg-red-600 hover:bg-red-800"
                 type="submit"
                 onclick="return confirm('Are you sure you want to delete this collection? This action cannot be undone.');"
               >
-                Delete Collection
+                Delete
               </button>
             </div>
           </form>
         </div>
       </div>
     </main>
-    <footer class="bg-slate-100">
-    </footer>
   </body>
 </html>
+
